--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,26 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-merge-conflict
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 3.9.2
+  - repo: local
     hooks:
       - id: flake8
+        name: Run flake8
+        entry: bash -c "echo 'Running flake8'; flake8 .; echo 'flake8 done'"
+        language: system
+        types: [python]
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
-    hooks:
       - id: mypy
+        name: Run mypy
+        entry: bash -c "echo 'Running mypy'; mypy .; echo 'mypy done'"
+        language: system
+        types: [python]
 
-  - repo: https://github.com/psf/black
-    rev: 21.5b2
-    hooks:
       - id: black
+        name: Run black
+        entry: bash -c "echo 'Running black'; black --check .; echo 'black done'"
+        language: system
+        types: [python]
 
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.8.0
-    hooks:
       - id: isort
+        name: Run isort
+        entry: bash -c "echo 'Running isort'; isort --check-only .; echo 'isort done'"
+        language: system
+        types: [python]
