chore: update pre-commit configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: flake8
         name: Run flake8
-        entry: poetry run flake8 --exclude=".venv" .
+        entry: poetry run flake8 --exclude=".venv"
         language: system
         types: [python]
 
