--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: Lint and Test
+name: Lint
 
 on: [push, pull_request]
 
@@ -14,21 +14,23 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.12'
+
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 mypy black isort
+        poetry install
 
     - name: Run flake8
-      run: flake8 your_code_directory/
+      run: poetry run flake8 .
 
     - name: Run mypy
-      run: mypy your_code_directory/
+      run: poetry run mypy .
 
     - name: Run black
-      run: black --check your_code_directory/
+      run: poetry run black --check .
 
     - name: Run isort
-      run: isort --check-only your_code_directory/
+      run: poetry run isort --check-only .
